--- a/exploreapp/pubspec.yaml
+++ b/exploreapp/pubspec.yaml
@@ -43,9 +43,18 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/images/zion_national_park_usa.jpg
+   - assets/images/zion_pic00.jpg
+   - assets/images/zion_pic01.jpg
+   - assets/images/zion_pic02.jpg
+   - assets/images/zion_pic03.jpg
    - assets/images/telluride_waterfall_usa.jpg
+   - assets/images/telluride_pic00.jpg
+   - assets/images/telluride_pic01.jpg
+   - assets/images/telluride_pic02.jpg
    - assets/images/rein_in_taufers_italy.jpg
-
+   - assets/images/rein_taufers_pic00.jpg
+   - assets/images/rein_taufers_pic01.jpg
+   - assets/images/rein_taufers_pic02.jpg
    - assets/json/explore_locations.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
