--- a/exploreapp/pubspec.yaml
+++ b/exploreapp/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  rxdart: ^0.22.0
 
 
 # For information on the generic Dart part of this file, see the
@@ -42,6 +43,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+   - assets/images/admin_pic.jpg
    - assets/images/zion_national_park_usa.jpg
    - assets/images/zion_pic00.jpg
    - assets/images/zion_pic01.jpg
